Archive2/b8/f2bc93290c69c0/output
main.cpp: In constructor 'constexpr S::S(int)':
main.cpp:8:32: error: uninitialized member 'S::x' in 'constexpr' constructor
     constexpr S(int j) : i{j} {}
                                ^
main.cpp: In function 'int main()':
main.cpp:13:20: error: 'constexpr S::S(int)' called in a constant expression
     constexpr S a(1);
                    ^
